MODSOURCE-905: Upgrade all dependencies for Sunflower fixing vulns (#698)
(cherry picked from commit e359adee41370f65e0bc53c4bf4315deb83b48c5)